// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`P has default styles 1`] = `
<body>
  <div>
    <p
      class="TodoListstyles__P-sc-10gobef-0 fDwbbO"
    />
  </div>
</body>
`;

exports[`Ul has default styles 1`] = `
<body>
  <div>
    <ul
      class="TodoListstyles__Ul-sc-10gobef-1 ezsqfU"
    />
  </div>
</body>
`;
